# Image_processing_Fourier

./: CMakeLists.txt  Doxyfile.in  FFTcalcul.cpp  FFTcalcul.h  ImageClass.cpp  ImageClass.hpp  README.md  helper.cpp  helper.hpp  imageFourierClass.cpp  imageFourierClass.hpp  main.cpp  plot_histogram.py  tests.cpp
